[package]
name = "adagram"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
corp = { path = "../corp" }
spfunc = "0.1.0"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
clap = { version = "4.5", features = ["derive"] }
binary-heap-plus = "0.5.0"
git-version = "0.3.9"
rocket = "0.5.1"
futures = "0.3.31"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
rayon = "1.10.0"
statrs = "0.18.0"
simple_logger = { version = "5.0.0", features = ["threads"] }
log = "0.4.26"
order-stat = "0.1.3"
#hogwild = "0.6.1"
