[package]
name = "adagram"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
corp = { path = "../corp" }
slope = { path = "../slope" }
spfunc = "0.1.0"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
clap = { version = "4.5", features = ["derive"] }
binary-heap-plus = "0.5.0"
git-version = "0.3.9"
rayon = "1.10.0"
#hogwild = "0.6.1"

[lib]
