[package]
name = "adagram"
version = "0.1.0"
edition = "2024"

[features]
default = ["mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
allow_malformed_models = []

[profile.release]
debug = true

[dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
mimalloc = { version = "0.1.48", optional = true }
corp = { git = "https://github.com/ondra/corp" }
slope = { git = "https://github.com/ondra/slope" }
spfunc = "0.1.0"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
clap = { version = "4.5", features = ["derive"] }
binary-heap-plus = "0.5.0"
git-version = "0.3.9"
rayon = "1.10.0"
itertools = "0.14.0"
wide = "1.1.1"
multiversion = "0.8.0"
#hogwild = "0.6.1"

[lib]
